# BlitzzARDemo

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/projects/shrungbhatt/blitzzardemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: jeep.wto  jeep_brakes.wto  jeep_dashboard.wto  jeep_engine.wto
app/src/main/java/com/projects/shrungbhatt/blitzzardemo/: AudioUtils.java  Const.java  Cube.java  CustomSurfaceView.java  DiscBrake.java  Driver.java  DropDownAlert.java  Engine.java  FlexboxLayout.java  GLRenderer.java  Interface_ResetAngle.java  (+8 more)
app/src/main/java/min3d/: Shared.java
app/src/main/java/min3d/core/: ManagedLightList.java  RendererActivity.java  Scene.java
app/src/main/res/layout/: activity_main.xml  simple_spinner_layout.xml  spinner_drop_down.xml
app/src/main/res/raw/: brakes1_obj  disc_brake_mtl  disc_brake_obj
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
plugins/: build.gradle
plugins/src/main/: AndroidManifest.xml
plugins/src/main/cpp/: CMakeLists.txt
plugins/src/main/cpp/include/opencv2/: opencv_modules.hpp
plugins/src/main/cpp/include/wikitude/: CameraFrameInputPluginModule.hpp  CameraParameters.hpp  CameraPosition.hpp  CompilerAttributes.hpp  DeviceIMUInputPluginModule.hpp  Geometry.hpp  ImageTarget.hpp  ImageTrackingPluginModule.hpp  InstantTrackingPluginModule.hpp  ObjectTarget.hpp  ObjectTrackingPluginModule.hpp  OpenGLESRenderingPluginModule.hpp  Plugin.h  PluginFrame.h  RecognizedTargetsBucket.hpp  SensorEvent.hpp  State.hpp
plugins/src/main/cpp/src/: FrameInputPluginModule.cpp  JniRegistration.cpp
plugins/src/main/cpp/src/barcode/: BarcodePlugin.cpp  BarcodePlugin.h
plugins/src/main/cpp/src/custom_camera/: YUVFrameInputPlugin.cpp  YUVFrameInputPlugin.h
plugins/src/main/cpp/src/face_detection/: FaceDetectionPlugin.cpp  FaceDetectionPlugin.h  FaceDetectionPluginConnector.cpp  FaceDetectionPluginConnector.h
plugins/src/main/cpp/src/simple_input_plugin/: SimpleInputPlugin.cpp  SimpleInputPlugin.h
wikitude-native-sdk/: build.gradle
(+18 files in other folders)
